--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,8 @@
 
 
 
-Lordwill1 <messagelordwill@gmail.com>
+Emilio <emiliostuhlhofer120@gmail.com>
 
-ejilistic <vitalisibeh85@gmail.com>
+Aranza <>
+
+Josue <>
